Causeview Package Complete/src/objects/App_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Causeview settings specific to each customer such as recordtype Ids</description>
    <fields>
        <fullName>Account_Donate_Now_Form_Id__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Causeview form ID used to process one time credit card donations.  Field is deprecated post Causeview v1.919.</description>
        <inlineHelpText>Causeview form ID used to process one time credit card donations.  Field is deprecated post Causeview v1.919.</inlineHelpText>
        <label>(deprecated) Account Donate Now Form Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actionpages_URL__c</fullName>
        <defaultValue>&quot;https://actionpage.causeview.com/Default.aspx&quot;</defaultValue>
        <description>Used by Actionpage Designer to reference Actionpages.</description>
        <inlineHelpText>Used by Actionpage Designer to reference Actionpages.</inlineHelpText>
        <label>Actionpages URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Appeal_Donate_Now_Form_Id__c</fullName>
        <description>Client donation Actionform used as the Appeal Fundraising template for Actionpage Designer.</description>
        <inlineHelpText>Client donation Actionform used as the Appeal Fundraising template for Actionpage Designer.</inlineHelpText>
        <label>Appeal Fundraising Form Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_RecordType_Id__c</fullName>
        <description>The RecordTypeId of a Causeview Campaign of type &quot;Appeal&quot;</description>
        <inlineHelpText>The RecordTypeId of a Causeview Campaign of type &quot;Appeal&quot;</inlineHelpText>
        <label>Appeal RecordType Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Create_Household__c</fullName>
        <description>Auto creates household record regardless - logic is based on input value</description>
        <inlineHelpText>Input one of the following values:
&apos;ALL&apos; - creates household for all individuals regardless of organization lookup
&apos;IND&apos; - only creates household for individuals linked to the Individual Bucket account
*Leave blank to disable feature</inlineHelpText>
        <label>Auto Create Household</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Account_Id__c</fullName>
        <description>Causeview customer ID.  18 digit alphanumeric ID.</description>
        <inlineHelpText>Causeview customer ID.  18 digit alphanumeric ID.</inlineHelpText>
        <label>Causeview Account Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Auth_Token__c</fullName>
        <description>Token is used in conjunction withActionengine REST API integration.</description>
        <inlineHelpText>Token is used in conjunction withActionengine REST API integration.</inlineHelpText>
        <label>Causeview Authorization Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_RecordType_Id__c</fullName>
        <description>The RecordTypeId of a Causeview Campaign of type &quot;Campaign&quot;</description>
        <inlineHelpText>The RecordTypeId of a Causeview Campaign of type &quot;Campaign&quot;</inlineHelpText>
        <label>Campaign RecordType Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Causeview_REST_API_URL__c</fullName>
        <defaultValue>&quot;https://api.causeview.com/v2.1/services/rest&quot;</defaultValue>
        <description>URL of Actionengine REST API.</description>
        <inlineHelpText>URL of Actionengine REST API.</inlineHelpText>
        <label>Causeview REST API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Donate_Now_Form_Id__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Causeview form ID used to process one time credit card donations. Field is deprecated post Causeview v1.919.</description>
        <inlineHelpText>Causeview form ID used to process one time credit card donations. Field is deprecated post Causeview v1.919.</inlineHelpText>
        <label>(deprecated) Contact Donate Now Form Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Actionpages_Campaign__c</fullName>
        <description>Default Appeal record that Actionforms will allocate to if no Appeal or Event is assigned.</description>
        <inlineHelpText>Default Appeal record that Actionforms will allocate to if no Appeal or Event is assigned.</inlineHelpText>
        <label>Default Actionpages Appeal</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Enhanced_Batch_Interface__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this box will switch the gift batch interface to the enhanced version.</description>
        <inlineHelpText>Checking this box will switch the gift batch interface to the enhanced version.</inlineHelpText>
        <label>Enable Enhanced Batch Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Enhanced_Fund_Accounting__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables enhanced fund accounting features when checked.</description>
        <label>Enable Enhanced Fund Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Pledge_Accrual_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Accrual Accounting method for Pledge Allocations</description>
        <label>Enable Pledge Accrual Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Pledge_Installment_Model__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking box will enable installment based pledge model.</description>
        <inlineHelpText>Checking box will enable installment based pledge model. Use at your own risk.</inlineHelpText>
        <label>Beta - Enable Pledge Installment Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Recurring_Receipts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This feature is to enable the receipt creation for gift type as recurring.
Default is unchecked</description>
        <inlineHelpText>Enable it if you want receipt to be created for recurring</inlineHelpText>
        <label>Enable Recurring Receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_RecordType_Id__c</fullName>
        <description>The RecordTypeId of a Causeview Campaign of type &quot;Event&quot;</description>
        <inlineHelpText>The RecordTypeId of a Causeview Campaign of type &quot;Event&quot;</inlineHelpText>
        <label>Event RecordType Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Registration_Form_Id__c</fullName>
        <description>Recordtype Id for Individual Application on the Volunteer Applications object.</description>
        <inlineHelpText>Causeview Actionform Id - used by Actionform Designer as paid event form template</inlineHelpText>
        <label>Paid Event Registration Form Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Start_Month__c</fullName>
        <label>Fiscal Start Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_URL__c</fullName>
        <defaultValue>&quot;https://api.causeview.com/form/v2.1/&quot;</defaultValue>
        <description>URL that points to the Actionforms.  Used by Actionpage Designer.</description>
        <inlineHelpText>URL that points to the Actionforms.  Used by Actionpage Designer.</inlineHelpText>
        <label>Actionform URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Free_Event_Registration_Form_Id__c</fullName>
        <description>Client event registration Actionform used as the Free Event template for Actionpage Designer.</description>
        <inlineHelpText>Client event registration Actionform used as the Free Event template for Actionpage Designer.</inlineHelpText>
        <label>Free Event Registration Form Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable only for UK Organizations</inlineHelpText>
        <label>Enable Gift-Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_App_RecordtypeId__c</fullName>
        <description>Recordtype Id for Individual Application on the Volunteer Applications object.</description>
        <inlineHelpText>Recordtype Id for Individual Application on the Volunteer Applications object.</inlineHelpText>
        <label>Individual Volunteer App Recordtype Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Trigger_Setting__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Other Address Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Free_Event_Registration_Form_Id__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Actionform Id used for public facing registrations.  Field is deprecated post Causeview v1.919.</description>
        <inlineHelpText>Actionform Id used for public facing registrations.  Field is deprecated post Causeview v1.919.</inlineHelpText>
        <label>(deprecated) Public Free Event Form Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Form_URL__c</fullName>
        <defaultValue>&quot;https://api.causeview.com/v2.1/GetStockFormId.aspx&quot;</defaultValue>
        <label>Stock Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_Workflows_for_Sending_Receipts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the system will use workflows to send email receipts instead of the Causeview trigger.  If this is enabled, the receipt template can no longer use Recipient merge fields, only RelatedTo merge fields can be used.</description>
        <inlineHelpText>If checked, the system will use workflows to send email receipts instead of the Causeview trigger.  If this is enabled, the receipt template can no longer use Recipient merge fields, only RelatedTo merge fields can be used.</inlineHelpText>
        <label>Use Workflows for Sending Receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_In_Kind_Hour_Value__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Volunteer In-Kind Hour Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Causeview App Settings</label>
</CustomObject>